--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -110,10 +110,13 @@
   margin: 0;
   background-color: black;
   height: 2px;
+  cursor: pointer;
 }
 
 .loginPage a{
   text-decoration: none;
+  cursor: pointer;
+  
 }
 
 .sellMenu {
